--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<ul>
+    <li>
+        <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="blank"> 
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" height="300px"/>
+        </a>
+        
+    </li>
 
+    <li>
+        <a href="https://en.wikipedia.org/wiki/Poodle" target="blank"> 
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" height="300px"/>
+        </a>
+        
+    </li>
 </body>
 
 </html>
